--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./scss/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+    </style>
     <title>Mytrofanov Maxym</title>
 </head>
 <body>
 <div class="container">
+<div class="navbar">
+    <img alt="Mytrofanov Maxym" src="assets/img/portrait_cr.jpg" id="portrait">
+
+    <ul id="navi_list">
+        <li id="Home">Home</li>
+        <li id="About">About me</li>
+        <li id="Education">Education</li>
+        <li id="Experience">Work Experience</li>
+        <li id="Skills">Skills</li>
+        <li id="Portfolio">Portfolio</li>
+        <li id="Contacts">Contacts</li>
+
+    </ul>
+</div>
+<div class="right_column" id="right_column">
+<div class="header" id="header">
+ssdf
+    <div class="portfolio_block" id="portfolio_block">
+        Portfolio
+    <div class="portfolio_inner_block">
+        ssss
+    </div>
+    </div>
+</div>
+</div>
+
+
 
 </div>
 
