добавил картинки в header

--- a/Index.html
+++ b/Index.html
@@ -27,14 +27,21 @@
 </div>
 <div class="right_column" id="right_column">
 <div class="header" id="header">
-ssdf
-    <div class="portfolio_block" id="portfolio_block">
-        Portfolio
-    <div class="portfolio_inner_block">
-        ssss
-    </div>
+<div  id="header_title">
+    Lets Make Something Great
+    <div class="header_annotation" id="header_annotation">
+        I’m an UI designer that prides ourself on being strategic brand partners and awesome product providers
     </div>
 </div>
+
+</div>
+    <div class="portfolio_block" id="portfolio_block">
+        <span class="portfolio_block_span">Portfolio</span>
+        <div class="portfolio_inner_block">
+            portfolio_inner_block
+        </div>
+    </div>
+
 </div>
 
 
